31/1/2005:	v3.0.1
	- support symlinks in cpio archive
	- lots of minor fixes
	- renamed files to stick to 8.3 scheme
	- much improved test script
	- use bold font
	- use 800x600, 16bit color
	- added new help texts

25/1/2005:	v3.0.0
	- jpeg decoding works

8/11/2004:	v2.6.0
	- rewrote internal memory management

5/10/2004:	v2.5.10
	- added help text for '64bit' switch (#46806)

1/10/2004	v2.5.9
	- new blue theme

1/10/2004:	v2.5.8
	- polish translations
	- back to blue theme

30/9/2004:	v2.5.7
	- new theme
	- hide passwords (#46094)

27/9/2004:	v2.5.6
	- more translations

20/9/2004:	v2.5.5
	- minor i18n fixes

13/9/2004:	v2.5.4
	- final graphics
	- norsk translations

6/9/2004:	v2.5.3
	- added new translations
	- preliminary SuSE theme graphics

2/9/2004:	v2.5.2
	- do the F-key-move-down magic only for syslinux (#44238)
	- some text cleanup (9.1 -> 9.2, dropped unused liveeval msgs)
	- integrated new splash picture

18/9/2004:	v2.5.1
	- basic arabic language support

9/8/2004:	v2.5.0
	- add 32/64 dualboot code
	- removed obsolete themes
	- switch to 'installation' if some F-key has been used (#41097)
	- don't offer 640x480; instead, select x11 vesa driver
	- assume monitor can display at least 800x600

2/8/2004:	v2.4.24
	- added SLES-Live theme

9/6/2004	v2.4.23
	- added SuSE-NLD theme

21/5/2004:	v2.4.22
	- new SLES pictures

12/5/2004:	v2.4.21
	- hide password in lilo (#40348)

14/4/2004:	v2.4.20
	- irqs might have been turned off in some cases
	- new SLES pictures

14/4/2004:	v2.4.19
	- font creation missed some chars (#38223)

8/4/2004:	v2.4.18
	- use 'install=slp://' (#36982)
	- add new 'biosmem' function
	- live cd layout changes
	- added live cd warning if there's not enough memory
	- added SLES theme (copy of SuSE theme)

7/4/2004:	v2.4.17
	- add SuSE-Live theme

6/4/2004:	v2.4.16
	- handle case where we can't set graphics mode (#35806)

5/4/2004:	v2.4.15
	- add HTTP install option

5/4/2004:	v2.4.14
	- add only english to boot/message (#38339)
